Fix props type for insertProject
