# public/swagger.json
@@ -554,11 +554,8 @@
         "type": "object",
         "additionalProperties": false
       },
-      "ProjectCore": {
+      "Pick_ProjectCore.Exclude_keyofProjectCore.slug__": {
         "properties": {
-          "slug": {
-            "type": "string"
-          },
           "user_email": {
             "type": "string"
           },
@@ -569,13 +566,13 @@
             "type": "boolean"
           }
         },
-        "required": ["slug", "user_email"],
+        "required": ["user_email"],
         "type": "object",
-        "additionalProperties": false
+        "description": "From T, pick a set of properties whose keys are in the union K"
       },
-      "Exclude_ProjectCore.slug_": {
-        "$ref": "#/components/schemas/ProjectCore",
-        "description": "Exclude from T those types that are assignable to U"
+      "Omit_ProjectCore.slug_": {
+        "$ref": "#/components/schemas/Pick_ProjectCore.Exclude_keyofProjectCore.slug__",
+        "description": "Construct a type with the properties of T except for those in type K."
       },
       "Partial_Omit_ProjectCore.slug__": {
         "properties": {
@@ -788,7 +785,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Exclude_ProjectCore.slug_"
+                "$ref": "#/components/schemas/Omit_ProjectCore.slug_"
               }
             }
           }
